--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: hard_coder blog
 description: hard_coder blog about IT
 keywords: python, hard_coder, developer
 author: Spike Ho Yeol Lee
-language:
+language: ko
 timezone: Asia/Seoul
 
 # URL
